# shape-map-3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gpfactor.h
gpfactor/: CMakeLists.txt
gpfactor/gp/: CMakeLists.txt  GaussianProcessSpatialPrior.h
matlab/shape-map/: Map2DGPGraph.m  MapGelSight.m  MapGelSightReal.m  Viz2DGPGraph.m  Viz3DGPGraph.m  Viz3DGPGraphReal.m  mapYCB.m  optimizeGraphBatch.m  optimizeGraphIncremental.m  vizHeightMapsTest.m
matlab/utils/: ScaleAndOffset.m  addNoise.m  cleanUp.m  plotPointsAndNormals3D.m  slice3D.m  splitFV.m  stlwrite.m
